--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">battery_charging_full</i></h2>
             <h5 class="center">Durable</h5>
 
             <p class="light">Our products are capable of withstanding high level of resistance to energy, which leads to long usable life and thus economic.</p>
@@ -110,7 +110,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">build</i></h2>
             <h5 class="center">Maintenance Free</h5>
 
             <p class="light">Due to construction design of our product which does not require ventilation, it can be mounted in any orientation and do not require constant maintenance.</p>
@@ -354,8 +354,8 @@ GBPL will endeavor constantly in improving and developing/upgrading their produc
 Hanchipura, Kunigal Road, <br>
 Nelamangala Taluq, Bengaluru Rural District,<br>
 Karnataka, India , 562123 <br>
-<b>Phone: 09741144266 <br>
-E-mail: consulengser@gmail.com / gbplbng@gmail.com</b>
+<b><i class = "material-icons">call</i>  Phone: 09741144266 <br>
+  <i class = "material-icons">email</i>  E-mail: consulengser@gmail.com / gbplbng@gmail.com</b>
 		  </p>
         </div>
       </div>
