--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
   </style>
-<link rel="shortcut icon" type="image/png" href="logo.png"/>
+<link rel="shortcut icon" type="image/png" href="logoNew.png"/>
 <script type = "text/javascript"
          src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
@@ -24,14 +24,7 @@
 <div class="navbar-fixed">
   <nav class="green" role="navigation">
     <div class="nav-wrapper">
-      <a id="logo-container" href="index.html" class="brand-logo"><img src="logo.png" width=110px height=120px/>
-<div style="float:left;width:120px;height:50px;">
-<a id="logo-container" href="index.html" class="brand-logo"><img src="logo.png" width=110px height=120px/>
-</div>
-<div style="float:left;width:220px;text-align:left;">
-     <h3>Gayathri Batteries</h3>
-</div>
-                  
+      <a id="logo-container" href="index.html" class="brand-logo"><img src="logoNew.png" width=200px height=120px/>               
 	  </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#About">About Us</a></li>
