--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <style type="text/css">
+  <style type="text/css"> 
   nav {
             height: 120px;
         line-height: 120px;
@@ -49,9 +49,9 @@
   </div>
  
   <div class="carousel carousel-slider">
-    <a class="carousel-item" href="#one!"><img src="background1.jpg" height=400px></a>
-    <a class="carousel-item" href="#two!"><img src="background2.jpg" height=400px></a>
-    <a class="carousel-item" href="#three!"><img src="background3.jpg" height=400px></a>
+    <a class="carousel-item" href="#one!"><img src="banner2.jpg" height=400px></a>
+    <a class="carousel-item" href="#two!"><img src="banner1.jpg" height=400px></a>
+    <a class="carousel-item" href="#three!"><img src="banner3.jpg" height=400px></a>
   </div>
   
 
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="banner1.jpg" alt="Unsplashed background img 2"></div>
   </div>
   
   <div class="container" id="About" >
@@ -162,7 +162,7 @@ The state of art plant has latest technology for manufacturing plates and for ce
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="banner2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container" id="Vision">
@@ -204,7 +204,7 @@ GBPL vision is to bring the experience of GBPL TEAM in Nickel Cadmium battery In
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="banner3.jpg" alt="Unsplashed background img 3"></div>
   </div>
   
   
@@ -245,7 +245,7 @@ GBPL will endeavor constantly in improving and developing/upgrading their produc
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="banner1.jpg" alt="Unsplashed background img 3"></div>
   </div>
   
       <div class="container" id="Products">
@@ -305,7 +305,7 @@ GBPL will endeavor constantly in improving and developing/upgrading their produc
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="banner2.jpg" alt="Unsplashed background img 3"></div>
   </div>
   
   
@@ -333,7 +333,7 @@ GBPL will endeavor constantly in improving and developing/upgrading their produc
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="banner3.jpg" alt="Unsplashed background img 3"></div>
   </div>
   
       <div class="container" id="Contact">
