--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  
   <div class="carousel carousel-slider">
     <a class="carousel-item" href="#one!"><img src="banner2.jpg" height=400px></a>
-    <a class="carousel-item" href="#two!"><img src="banner1.jpg" height=400px></a>
+    <a class="carousel-item" href="#two!"><img src="banner1.jpeg" height=400px></a>
     <a class="carousel-item" href="#three!"><img src="banner3.jpg" height=400px></a>
   </div>
   
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="banner1.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="banner1.jpeg" alt="Unsplashed background img 2"></div>
   </div>
   
   <div class="container" id="About" >
@@ -245,7 +245,7 @@ GBPL will endeavor constantly in improving and developing/upgrading their produc
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="banner1.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="banner1.jpeg" alt="Unsplashed background img 3"></div>
   </div>
   
       <div class="container" id="Products">
